feat: ファイルインポートボタンの動作を改善
- ボタン押下時にファイル選択をリセットする処理を追加
- 同じファイルを連続で選択できるように対応

--- a/index.html
+++ b/index.html
@@ -432,6 +432,11 @@
     const btnApplyInputs = document.getElementById("btnApplyInputs");
     const fileApplyInputs = document.getElementById("fileApplyInputs");
 
+    // ボタン押下 → ファイル選択（同じファイルを連続で選べるよう value を消す）
+    btnImport.addEventListener("click", () => {
+      fileImport.value = "";
+      fileImport.click();
+    });
 
     
 btnApplyInputs.addEventListener("click", () => {
